specs/001-typescript-to-zig-native/examples/valid/exceptions.ts
try {
  throw Error("boom");
  console.log("skip");
} catch (err) {
  console.log(err.message);
} finally {
  console.log("done");
}
