specs/001-typescript-to-zig-native/examples/invalid/if-condition-type.ts
if (1) {
  console.log("bad");
}
